...

                if (originalText == 'CLR') {
                  displayText = 'C';
                }
                // Thay đổi nút khi bấm 2nd ở chế độ scientific
                else if (provider.mode == CalculatorMode.scientific && provider.is2ndMode) {
                  if (originalText == 'sin') displayText = 'asin';
                  else if (originalText == 'cos') displayText = 'acos';
                  else if (originalText == 'tan') displayText = 'atan';
                  else if (originalText == 'log') displayText = 'log₂';
                  else if (originalText == 'x²') displayText = 'x³';
                  else if (originalText == '√') displayText = '∛';
                  else if (originalText == 'ln') displayText = 'n!';
...
